--- a/src/Idiomas/_EN.properties
+++ b/src/Idiomas/_EN.properties
@@ -1,8 +1,7 @@
 #English
 
 #Principal
-lblIdioma = "Language"
-btnHacerR = "Do a Booking"
-lblMenu = "Main Menu"
-btnMostrarV = "View Flights"
-btnMostrarR = "View Reservations"
+btnHacerR = Do a Booking
+lblMenu = MAIN MENU
+btnMostrarV = View Flights
+btnMostrarR = View Reservations
