--- a/src/Idiomas/_ES.properties
+++ b/src/Idiomas/_ES.properties
@@ -1,10 +1,8 @@
 #Español
 
 #Principal
-lblIdioma = "Idioma"
-btnHacerR = "Hacer Reserva"
-lblMenu = "Menú Principal"
-btnMostrarV = "Mostrar Vuelos"
-btnMostrarR = "Mostrar Reservas"
-
+btnHacerR = Hacer Reserva
+lblMenu = MENÚ PRINCIPAL
+btnMostrarV = Mostrar Vuelos
+btnMostrarR = Mostrar Reservas
 
