--- a/src/Idiomas/_EN.properties
+++ b/src/Idiomas/_EN.properties
@@ -5,3 +5,30 @@ btnHacerR = Do a Booking
 lblMenu = MAIN MENU
 btnMostrarV = View Flights
 btnMostrarR = View Reservations
+
+#Mostrar Vuelos
+btnAtrs = Back
+lblVDisponibles = Available Flights
+
+#Hacer Reserva
+lblOrigen = Origin
+lblDestino = Destination
+btnSiguiente = Next
+btnAtras = Back
+
+#Reservas Realizadas
+lblRRealizadas = Bookings Made
+btnCancelar = Cancel
+btnAtrs2 = Back
+
+#PopUP Sin Plazas
+lblEsteVueloYa = This flight has no seats available
+btnAcept = Accept
+
+#PoPUP Reserva Realizada
+lblSuReserva = Your reservation has been successfully made
+btnAceptar = Accept
+
+#PopUP Cancelar Reserva
+lblRCancelada = Your reservation has been canceled
+btnAceptar2 = Accept
