--- a/src/Idiomas/_ES.properties
+++ b/src/Idiomas/_ES.properties
@@ -6,3 +6,29 @@ lblMenu = MENÚ PRINCIPAL
 btnMostrarV = Mostrar Vuelos
 btnMostrarR = Mostrar Reservas
 
+#Mostrar Vuelos
+btnAtrs = Atrás
+lblVDisponibles = Vuelos Disponibles
+
+#Hacer Reserva
+lblOrigen = Origen
+lblDestino = Destino
+btnSiguiente = Siguiente
+btnAtras = Atrás
+
+#Reservas Realizadas
+lblRRealizadas = Reservas Realizadas
+btnCancelar = Cancelar
+btnAtrs2 = Atrás
+
+#PopUP Sin Plazas
+lblEsteVueloYa = Este vuelo ya no tiene plazas disponibles
+btnAcept = Aceptar
+
+#PopUP Reserva Realizada
+lblSuReserva = Su reserva ha sido realizada con éxito
+btnAceptar = Aceptar
+
+#PopUP Cancelar Reserva
+lblRCancelada = Su reserva ha sido cancelada
+btnAceptar2 = Aceptar
