--- a/src/Idiomas/_EN.properties
+++ b/src/Idiomas/_EN.properties
@@ -5,6 +5,8 @@ btnHacerR = Do a Booking
 lblMenu = MAIN MENU
 btnMostrarV = View Flights
 btnMostrarR = View Reservations
+btnIniciar = Login
+chckbxAdministrador = Administrator
 
 #Mostrar Vuelos
 btnAtrs = Back
