--- a/src/Idiomas/_ES.properties
+++ b/src/Idiomas/_ES.properties
@@ -5,6 +5,8 @@ btnHacerR = Hacer Reserva
 lblMenu = MENÚ PRINCIPAL
 btnMostrarV = Mostrar Vuelos
 btnMostrarR = Mostrar Reservas
+btnIniciar = Iniciar
+chckbxAdministrador = Administrador
 
 #Mostrar Vuelos
 btnAtrs = Atrás
