--- a/src/Idiomas/_EN.properties
+++ b/src/Idiomas/_EN.properties
@@ -34,3 +34,7 @@ btnAceptar = Accept
 #PopUP Cancelar Reserva
 lblRCancelada = Your reservation has been canceled
 btnAceptar2 = Accept
+
+#PopUP Conectado
+lblSeHaLogueado = You are successfully logged in
+btnAceptar3 = Accept
