--- a/src/Idiomas/_ES.properties
+++ b/src/Idiomas/_ES.properties
@@ -34,3 +34,7 @@ btnAceptar = Aceptar
 #PopUP Cancelar Reserva
 lblRCancelada = Su reserva ha sido cancelada
 btnAceptar2 = Aceptar
+
+#PopUP Conectado
+lblSeHaLogueado = Ha iniciado sesión correctamente
+btnAceptar3 = Aceptar
