--- a/src/Idiomas/_EN.properties
+++ b/src/Idiomas/_EN.properties
@@ -12,11 +12,18 @@ chckbxAdministrador = Administrator
 btnAtrs = Back
 lblVDisponibles = Available Flights
 
+
 #Hacer Reserva
 lblOrigen = Origin
 lblDestino = Destination
 btnSiguiente = Next
 btnAtras = Back
+Idvuelo = Flight ID
+Origen = Origin
+Destino = Destination
+H.Salida = Check in
+H.Llegada = Check out
+Plazas = Seats
 
 #Reservas Realizadas
 lblRRealizadas = Bookings Made
@@ -38,3 +45,4 @@ btnAceptar2 = Accept
 #PopUP Conectado
 lblSeHaLogueado = You are successfully logged in
 btnAceptar3 = Accept
+
