--- a/src/Idiomas/_ES.properties
+++ b/src/Idiomas/_ES.properties
@@ -12,11 +12,18 @@ chckbxAdministrador = Administrador
 btnAtrs = Atrás
 lblVDisponibles = Vuelos Disponibles
 
+
 #Hacer Reserva
 lblOrigen = Origen
 lblDestino = Destino
 btnSiguiente = Siguiente
 btnAtras = Atrás
+Idvuelo = ID Vuelo
+Origen = Origen
+Destino = Destino
+H.Salida = H.Salida
+H.Llegada = H.Llegada
+Plazas = Plazas
 
 #Reservas Realizadas
 lblRRealizadas = Reservas Realizadas
