--- a/src/Idiomas/_EN.properties
+++ b/src/Idiomas/_EN.properties
@@ -18,12 +18,7 @@ lblOrigen = Origin
 lblDestino = Destination
 btnSiguiente = Next
 btnAtras = Back
-Idvuelo = Flight ID
-Origen = Origin
-Destino = Destination
-H.Salida = Check in
-H.Llegada = Check out
-Plazas = Seats
+lblNombre = Enter your name:
 
 #Reservas Realizadas
 lblRRealizadas = Bookings Made
