--- a/src/Idiomas/_ES.properties
+++ b/src/Idiomas/_ES.properties
@@ -18,12 +18,7 @@ lblOrigen = Origen
 lblDestino = Destino
 btnSiguiente = Siguiente
 btnAtras = Atrás
-Idvuelo = ID Vuelo
-Origen = Origen
-Destino = Destino
-H.Salida = H.Salida
-H.Llegada = H.Llegada
-Plazas = Plazas
+lblNombre = Introduce tu nombre:
 
 #Reservas Realizadas
 lblRRealizadas = Reservas Realizadas
